# k8s-device-serial

./: Cargo.toml  LICENSE.md  README.md  build.rs  conf.yaml  test-pod.yaml
proto/: api.proto
src/: main.rs  uds.rs
